Redo measurement selection menu

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -10,8 +10,10 @@
 
 #fi {
     background-color: #008CBA;
+    border-radius: 12px;
 }
 
 #en {
     background-color: #4CAF50;
+    border-radius: 12px;
 }
