Add result page translations

--- a/demo_views/results.ejs
+++ b/demo_views/results.ejs
@@ -69,6 +69,10 @@
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/Metro-UI-CSS-master/build/js/metro.js"></script>
 <script src="/js/script.js"></script>
+<script src="/logs/fi_descriptions.js"></script>
+<script src="/logs/en_descriptions.js"></script>
+<script src="/logs/fi_resultExports.js"></script>
+<script src="/logs/en_resultExports.js"></script>
 <script data-language=<%= lang %> src="/js/results.js"></script>
 
 </body>
