--- a/demo_views/menu.ejs
+++ b/demo_views/menu.ejs
@@ -17,9 +17,9 @@
 		</div>
 
 		<div class="buttonArea">
-			<button id="back" type="button" onClick="returnHome()">text.backButton</button>
-			<button id="bloodPressure" type="button" onClick="bloodPressure()">text.bloodButton</button>
-			<button id="bodyComposition" type="button" onClick="startMeasurements()">text.bodyButton</button>
+			<button id="back" type="button" onClick="returnHome()"><%= text.backButton %></button>
+			<button id="bloodPressure" type="button" onClick="bloodPressure()"><%= text.bloodButton %></button>
+			<button id="bodyComposition" type="button" onClick="bodyComposition()"><%= text.bodyButton %></button>
 		</div>
 
 	</body>
