--- a/demo_views/basicInfo.ejs
+++ b/demo_views/basicInfo.ejs
@@ -43,10 +43,10 @@
 			<input type="button" class="button" id="female" value=<%= text.female %> />
 		</div>
 		<div class="row" style="margin-top: 60px;">
-			<div class="col-md-6"><a href="/" id="cancel"><span class="mif-chevron-thin-left"></span> <%= text.cancel%></a></div>
+			<div class="col-md-6"><a href="/menu" id="cancel"><span class="mif-chevron-thin-left"></span> <%= text.cancel%></a></div>
 			<button class="col-md-6 button next"><a id="sendData"><%= text.next %> <span class="mif-chevron-thin-right"></span></a></button>
 		</div>
-		<button><a href="/selectDevices">Debug seuraava</a></button>
+		<button><a href="/menu">Debug seuraava</a></button>
 	</form>
 
 	<textarea id="infoBox" rows="4" cols="50" readonly>
